# MindForgeForHermes

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: eval.yml
docs/integrations/: README.md  claude-code.md  claude-desktop.md  codex-cli.md  generic-mcp.md  hermes-agent.md  openai-agents-sdk.md  openclaw.md
docs/superpowers/plans/: 2026-04-21-phase0-and-phase1.md
eval/: README.md
eval/fixtures/: context_window_conflict.gt.yaml  context_window_conflict.md  database_choice.gt.yaml  database_choice.md  kv_cache_basics.gt.yaml  kv_cache_basics.md  rag_architecture.gt.yaml  rag_architecture.md
eval/reports/: 20260421T230751Z.json
examples/transcripts/: sample_ai_architecture.md
mindforge/: __init__.py  cli.py  config.py  paths.py  pipeline.py
mindforge/distillation/: concept.py  deduplicator.py  distiller.py  renderer.py
mindforge/embeddings/: index.py
mindforge/eval/: __init__.py  corpus.py  runner.py  scorer.py
mindforge/graph/: builder.py
mindforge/ingestion/: chunker.py  extractor.py  incremental.py  parser.py
mindforge/linking/: linker.py
mindforge/mcp/: __main__.py  server.py  server_multikb.py  server_original.py
mindforge/query/: engine.py
mindforge/utils/: text.py
skills/: SKILL.md
tests/: test_distillation.py  test_eval_corpus.py  test_eval_runner.py  test_eval_scorer.py  test_graph.py  test_incremental_ingestion.py  test_ingestion.py  test_linking.py  test_mcp.py  test_paths.py  test_pipeline.py  test_text_utils.py
